--- a/frontend/motsi/package.json
+++ b/frontend/motsi/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
+    "react-bootstrap": "^1.6.1",
     "react-date-range": "^1.3.0",
+    "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
@@ -29,7 +31,8 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
